syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.github.godcong.proto";
option java_outer_classname = "QuantitativeTradingProto";

package proto;

service QuantitativeTrading {
    rpc MessageInfo (MessageRequest) returns (MessageReply) {
    }
    rpc Trade(TradeRequest) returns (TradeReply){
    }
}

message MessageRequest {
    string json = 1;
}

message MessageReply {
    string json = 1;
}

message TradeRequest{
    string json =1;
}

message TradeReply {
    string json =1;
}